5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4161/executions/1801_2577.log
== TEST (2019-06-08 12:45:36) 
-- CODE:
s = input("frase: ")
s = s.replace("a", "")
print(s)
-- OUTPUT:
voce_pode_vir_qui
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 12:46:03) 
-- CODE:
s = input("frase: ")
s = s.replace("a", "")
s = s.replace("b", "")
s = s.replace("c", "")
s = s.replace("d", "")
s = s.replace("e", "")
print(s)
-- OUTPUT:
vo_po_vir_qui
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 12:46:19) 
-- CODE:
s = input("frase: ")
s = s.replace("a", "")
s = s.replace("e", "")
s = s.replace("i", "")
s = s.replace("o", "")
s = s.replace("u", "")
print(s)
-- OUTPUT:
vc_pd_vr_q
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 12:46:28) 
-- CODE:
s = input("frase: ")
s = s.replace("a", "")
s = s.replace("e", "")
s = s.replace("i", "")
s = s.replace("o", "")
s = s.replace("u", "")
print(s)
-- OUTPUT:
vc_pd_vr_q
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-08 12:46:35) 
-- CODE:
s = input("frase: ")
s = s.replace("a", "")
s = s.replace("e", "")
s = s.replace("i", "")
s = s.replace("o", "")
s = s.replace("u", "")
print(s)
-- EXECUTION TIME:
0.755225
-- TEST CASE 1:
---- input:
voce_pode_vir_aqui
---- correct output:
vc_pd_vr_q
---- user output:
vc_pd_vr_q
-- TEST CASE 2:
---- input:
com
---- correct output:
cm
---- user output:
cm
-- TEST CASE 3:
---- input:
tudo
---- correct output:
td
---- user output:
td
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 12:47:26) 
-- CODE:
s = input("frase: ")
s = s.replace("a", "").replace("e", "").replace("i", "").replace("o", "")s.replace("u", "")

print(s)
-- ERROR:
File "XXXX", line 2
    s = s.replace("a", "").replace("e", "").replace("i", "").replace("o", "")s.replace("u", "")
                                                                             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 12:47:37) 
-- CODE:
s = input("frase: ")
s = s.replace("a", "")
s = s.replace("e", "")
s = s.replace("i", "")
s = s.replace("o", "")
s = s.replace("u", "")

print(s)
-- OUTPUT:
vc_pd_vr_q
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 12:47:40) 
-- CODE:
s = input("frase: ")
s = s.replace("a", "")
s = s.replace("e", "")
s = s.replace("i", "")
s = s.replace("o", "")
s = s.replace("u", "")

print(s)
-- OUTPUT:
vc_pd_vr_q
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 12:47:47) 
-- CODE:
s = input("frase: ")
s = s.replace("a", "")
s = s.replace("e", "")
s = s.replace("i", "")
s = s.replace("o", "")
s = s.replace("u", "")

print(s)
-- OUTPUT:
vc_pd_vr_q
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 12:47:53) 
-- CODE:
s = input("frase: ")
s = s.replace("a", "")
s = s.replace("e", "")
s = s.replace("i", "")
s = s.replace("o", "")
s = s.replace("u", "")

print(s)
-- OUTPUT:
vc_pd_vr_q
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 12:48:00) 
-- CODE:
s = input("frase: ")
s = s.replace("a", "")
s = s.replace("e", "")
s = s.replace("i", "")
s = s.replace("o", "")
s = s.replace("u", "")

print(s)
-- OUTPUT:
vc_pd_vr_q
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
